about, home component added

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <base href="/">
     <title>Angular 2 - Simple Reddit</title>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="images/favicon.ico" />
@@ -47,7 +48,7 @@
     </div>
 
     <div class="ui main text container">
-      <reddit></reddit> <!-- <--- Our app loads here! -->
+      <reddit></reddit> <!-- Our app loads here! -->
     </div>
 
   </body>
